# MusicPlayer

./: README.md
music_player/: Cargo.toml
music_player/src/events/: events.rs  key.rs  mod.rs
