[package]
name = "music-player"
version = "0.2.0-alpha.13"
edition = "2021"
repository = "https://github.com/nsavvide/MusicPlayer"
license = "MIT"
readme = "README.md"
authors = ["Niels Savvides <niels.i.savvides@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["tokio", "music", "daemon", "streaming", "player"]
description = "An extensible music player written in Rust"

[dependencies]

clap = "3.2.20"
tokio = { version = "1.21.0", features = ["full"] }
md5 = "0.7.0"
sea-orm = { version = "0.9.2", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
futures = "0.3.24"
lofty = "0.9.0"
owo-colors = "3.5.0"
tabled = "0.8.0"
crossterm = { version = "0.25.0", features = ["serde"] }
tui = { version = "0.19.0", features = ["crossterm", "serde"] }
tungstenite = "0.17.3"
futures-channel = "0.3.24"
serde_json = "1.0.85"
dirs = "4.0.0"
spinners = "4.1.0"
anyhow = "1.0.67"
